--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <section id="gallery">
             <h2>图片库</h2>
             <div class="grid">
-                <img src="media/image1.jpg" alt="图片1">
-                <img src="media/image2.jpg" alt="图片2">
+                <img src="media/1.jpg" alt="图片1">
+                <img src="media/saber.jpg" alt="图片2">
                 <img src="media/image3.jpg" alt="图片3">
                 <img src="media/image4.jpg" alt="图片4">
             </div>
