--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <section class="full-screen-image">
-        <img src="path/to/your/fullscreen-image.jpg" alt="Full Screen" class="fullscreen">
+        <img src="media/1.jpg" alt="Full Screen" class="fullscreen">
     </section>
 
     <section class="text-section">
