--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="path/to/your/image.jpg" alt="Logo" class="logo">
+        <img src="media/AF-logo.png" alt="Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="#introduction">introduction</a></li>
