--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
 <body>
   <header>
-    <img src="AF-logo.png" alt="Logo" class="logo">
+    <img src="media/AF-logo.png" alt="Logo" class="logo">
 
     <nav>
       <ul>
@@ -303,7 +303,7 @@
   </header>
 
 <section class="full-screen-image">
-  <img src="1.jpg" alt="Full Screen" class="fullscreen">
+  <img src="media/1.jpg" alt="Full Screen" class="fullscreen">
 </section>
 
   
@@ -312,7 +312,7 @@
 <section class="video-section">
   <div class="video-container">
     <video autoplay muted loop>>
-      <source src="introduction.mp4" type="video/mp4">
+      <source src="media/introduction.mp4" type="video/mp4">
       您的浏览器不支持视频标签。
     </video>
 
@@ -390,14 +390,14 @@
   <div class="gallery">
   
     <img src="media/xuanhe0.png" alt="图片1">
-    <img src="xuanhe01.png" alt="图片2">
-    <img src="xuanhe02.png" alt="图片3">
-    <img src="xuanhe03.png" alt="图片4">
-    <img src="xuanhe04.png" alt="图片5">
-    <img src="xuanhe05.png" alt="图片6">
-    <img src="xuanhe06.png" alt="图片7">
-    <img src="xuanhe07.png" alt="图片8">
-    <img src="xuanhe08.png" alt="图片9">
+    <img src="media/xuanhe01.png" alt="图片2">
+    <img src="media/xuanhe02.png" alt="图片3">
+    <img src="media/xuanhe03.png" alt="图片4">
+    <img src="media/xuanhe04.png" alt="图片5">
+    <img src="media/xuanhe05.png" alt="图片6">
+    <img src="media/xuanhe06.png" alt="图片7">
+    <img src="media/xuanhe07.png" alt="图片8">
+    <img src="media/xuanhe08.png" alt="图片9">
   
   </div>
 </div>
