--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   top: 0%; /* 垂直 */
   left: 0%; /* 水平 */
   background-color: rgba(245,245,245,1);
-  clip-path: polygon(0% 21%, 100% 21%, 100% 8%,75% 5%); /* 定义四边形形状 */
+  clip-path: polygon(0% 20%, 100% 20%, 100% 8%,75% 5%); /* 定义四边形形状 */
   padding: 49.5vw;
   
   }
@@ -401,7 +401,9 @@
   
   </div>
 </div>
-
+ 
+<gradio-app src="https://Aster221-Space1.hf.space" theme_mode="light"></gradio-app>
+ 
 <footer>
 <p>&copy; 2024 我的网页</p>
 </footer>
