--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
   </div>
 </div>
  
-<gradio-app src="https://Aster221-Space1.hf.space" theme_mode="light"></gradio-app>
+<gradio-app src="https://Aster221-second-project-Space1.hf.space" theme_mode="light"></gradio-app>
  
 <footer>
 <p>&copy; 2024 我的网页</p>
