--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <li><a href="#works">WORKS</a></li>
         <li><a href="#concept">CONCEPT</a></li>
         <li><a href="#member">MEMBER</a></li>
-        <li ><a href="#contact">CONTACT</a></li>
+        <li ><a href="#contact.html">CONTACT</a></li>
 
     </ul>
   </nav>
