--- a/index.html
+++ b/index.html
@@ -272,8 +272,14 @@
   
   }
 
+ 
+iframe {
+            border: none;
+            width: 80%; /* 根据需要调整宽度 */
+            height: 80%; /* 根据需要调整高度 */
+        }
 
-
+ 
   footer {
   text-align: center;
   padding: 20px;
@@ -402,7 +408,8 @@
   </div>
 </div>
  
-<gradio-app src="https://Aster221-second-project-Space1.hf.space" theme_mode="light"></gradio-app>
+
+<iframe src="https://Aster221-Space1.hf.space" theme_mode="light"></iframe>
  
 <footer>
 <p>&copy; 2024 我的网页</p>
