--- a/index.html
+++ b/index.html
@@ -275,8 +275,9 @@
  
 iframe {
             border: none;
-            width: 80%; /* 根据需要调整宽度 */
-            height: 80%; /* 根据需要调整高度 */
+            width: 50%; /* 根据需要调整宽度 */
+            height: 30%; /* 根据需要调整高度 */
+            justify-content: center;
         }
 
  
