--- a/index.html
+++ b/index.html
@@ -272,11 +272,20 @@
   
   }
 
+
+.iframe-section {
+  background-color: rgba(245,245,245,1); /* 更改为您想要的颜色 */
+  padding: 0px; /* 内边距 */
+  height: 100vh;
+  align-items: center; /* 垂直居中 */
+  margin: 0; /* 去除默认的 margin */
+  }
+
  
 iframe {
             border: none;
-            width: 50%; /* 根据需要调整宽度 */
-            height: 30%; /* 根据需要调整高度 */
+            width: 80%; /* 根据需要调整宽度 */
+            height: 15%; /* 根据需要调整高度 */
             justify-content: center;
         }
 
@@ -408,12 +417,14 @@ iframe {
   
   </div>
 
-<iframe src="https://Aster221-Space1.hf.space" theme_mode="light"></iframe>
- 
+
 </div>
+
+<div class="iframe-section">
  
+ <iframe src="https://Aster221-Space1.hf.space" theme_mode="light"></iframe>
 
-
+</div>
  
 <footer>
 <p>&copy; 2024 我的网页</p>
