--- a/index.html
+++ b/index.html
@@ -275,15 +275,15 @@
 
 .iframe-section {
   background-color: rgba(245,245,245,1); /* 更改为您想要的颜色 */
-  padding: 0px; /* 内边距 */
   height: 100vh;
   align-items: center; /* 垂直居中 */
-  margin: 0; /* 去除默认的 margin */
+  justify-content: center; /* 水平居中 */
+  
   }
 
  
 iframe {
-            border: none;
+            border: 1;
             width: 80%; /* 根据需要调整宽度 */
             height: 15%; /* 根据需要调整高度 */
             justify-content: center;
