--- a/index.html
+++ b/index.html
@@ -278,15 +278,17 @@
   height: 100vh;
   align-items: center; /* 垂直居中 */
   justify-content: center; /* 水平居中 */
-  
+  display: flex; /* 使用 Flexbox 布局 */
   }
 
  
 iframe {
             border: 1;
             width: 80%; /* 根据需要调整宽度 */
-            height: 15%; /* 根据需要调整高度 */
+            height: 30%; /* 根据需要调整高度 */
             justify-content: center;
+            max-width: 800px; /* 设置最大宽度 */
+            max-height: 600px; /* 设置最大高度 */
         }
 
  
@@ -383,7 +385,7 @@ iframe {
 
 
 
-<div class="background-section">
+<section class="background-section">
 
   <div class="works">WORKS</div>
   
@@ -416,9 +418,8 @@ iframe {
     <img src="media/xuanhe08.png" alt="图片9">
   
   </div>
-
-
-</div>
+ 
+</section>
 
 <div class="iframe-section">
  
