--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   .background-section {
   background-color: rgba(245,245,245,1); /* 更改为您想要的颜色 */
   padding: 0px; /* 内边距 */
-  height: 200vh;
+  height: 150vh;
   }
   
   
@@ -283,12 +283,11 @@
 
  
 iframe {
-            border: 1;
+            border: none;
             width: 80%; /* 根据需要调整宽度 */
-            height: 30%; /* 根据需要调整高度 */
+            height: 50%; /* 根据需要调整高度 */
             justify-content: center;
-            max-width: 800px; /* 设置最大宽度 */
-            max-height: 600px; /* 设置最大高度 */
+            
         }
 
  
