--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>个人作品集</title>
+ <link rel="stylesheet" href="styles.css">
 <style>
   * {
   box-sizing: border-box;
@@ -429,5 +430,6 @@ iframe {
 <footer>
 <p>&copy; 2024 我的网页</p>
 </footer>
+  <script src="script.js"></script>
 </body>
 </html>
