--- a/index.html
+++ b/index.html
@@ -302,7 +302,10 @@ iframe {
 </head>
 
 <body>
-  <script src="script.js"></script>
+  <div id="intro-animation">
+    <h1>欢迎来到我的作品集</h1>
+</div>
+ <script src="script.js"></script>
   <header>
     <img src="media/AF-logo.png" alt="Logo" class="logo">
 
