--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>个人作品集</title>
- 
+  <link rel="stylesheet" href="styles.css">
 <style>
   * {
   box-sizing: border-box;
