--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>个人作品集</title>
-  <link rel="stylesheet" href="styles.css">
+ 
 <style>
   * {
   box-sizing: border-box;
@@ -13,8 +13,33 @@
   body{
   font-family: Arial, sans-serif;
   background-color:white;
+     overflow: hidden; /* 禁止滚动，直到动画结束 */
   }
 
+
+ /* 开场动画样式 */
+        #intro-animation {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 165, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            opacity: 1;
+            transition: opacity 1s ease;
+            z-index: 1000; /* 确保在最上层 */
+        }
+
+        #intro-animation.hidden {
+            opacity: 0;
+            visibility: hidden; /* 动画结束后隐藏 */
+        }
+
+
+  
   header {
   display: flex;
   align-items: center;
@@ -302,9 +327,10 @@ iframe {
 </head>
 
 <body>
+  
   <div id="intro-animation">
-    <h1>欢迎来到我的作品集</h1>
-</div>
+        <h1 style="color: white; font-size: 3rem;">欢迎来到我的作品集</h1>
+    </div> 
  
   <header>
     <img src="media/AF-logo.png" alt="Logo" class="logo">
@@ -434,6 +460,14 @@ iframe {
 <footer>
 <p>&copy; 2024 我的网页</p>
 </footer>
- <script src="script.js"></script>
+<script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const introAnimation = document.getElementById("intro-animation");
+            setTimeout(() => {
+                introAnimation.classList.add("hidden");
+                document.body.style.overflow = "auto"; // 动画结束后允许滚动
+            }, 3000); // 3秒后隐藏动画
+        });
+    </script>
 </body>
 </html>
