--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ iframe {
   </header>
 
 <section class="full-screen-image">
-  <img src="media/2.png" alt="Full Screen" class="fullscreen">
+  <img src="" alt="Full Screen" class="fullscreen">
 </section>
 
   
