--- a/index.html
+++ b/index.html
@@ -9,36 +9,6 @@
   margin: 0;/外边距/
   padding: 0;/内边距/
   }
-
-  body{
-  font-family: Arial, sans-serif;
-  background-color:white;
-     overflow: hidden; /* 禁止滚动，直到动画结束 */
-  }
-
-
- /* 开场动画样式 */
-        #intro-animation {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(255, 165, 0, 0.8);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            opacity: 1;
-            transition: opacity 1s ease;
-            z-index: 1000; /* 确保在最上层 */
-        }
-
-        #intro-animation.hidden {
-            opacity: 0;
-            visibility: hidden; /* 动画结束后隐藏 */
-        }
-
-
   
   header {
   display: flex;
@@ -328,9 +298,6 @@ iframe {
 
 <body>
   
-  <div id="intro-animation">
-        <h1 style="color: white; font-size: 3rem;">欢迎来到我的作品集</h1>
-    </div> 
  
   <header>
     <img src="media/AF-logo.png" alt="Logo" class="logo">
@@ -351,7 +318,7 @@ iframe {
   </header>
 
 <section class="full-screen-image">
-  <img src="" alt="Full Screen" class="fullscreen">
+  <img src="media/2.png" alt="Full Screen" class="fullscreen">
 </section>
 
   
@@ -460,14 +427,6 @@ iframe {
 <footer>
 <p>&copy; 2024 我的网页</p>
 </footer>
-<script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const introAnimation = document.getElementById("intro-animation");
-            setTimeout(() => {
-                introAnimation.classList.add("hidden");
-                document.body.style.overflow = "auto"; // 动画结束后允许滚动
-            }, 3000); // 3秒后隐藏动画
-        });
-    </script>
+
 </body>
 </html>
