--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ iframe {
 <section class="video-section">
   <div class="video-container">
     <video autoplay muted loop>>
-      <source src="media/introduction1.mp4" type="video/mp4">
+      <source src="media/intrdoucation1.mp4" type="video/mp4">
       您的浏览器不支持视频标签。
     </video>
 
